Fixed text align and got rid of bullet points in desktop

--- a/sass/_partials/_section-four.scss
+++ b/sass/_partials/_section-four.scss
@@ -32,6 +32,8 @@
     color: $text-black;
   }
   &__list {
+    padding: 0;
+    list-style: none;
     color: $text-grey;
   }
 }
@@ -47,6 +49,8 @@
     color: $text-black;
   }
   &__list {
+    padding: 0;
+    list-style: none;
     color: $text-grey;
   }
 }
@@ -59,6 +63,9 @@
 
 .contact {
   text-align: center;
+  @media (min-width: 1000px) {
+    text-align: left;
+  }
   &__address {
     color: $text-grey;
     @media (min-width: 1000px) {
